# CarPlate

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dongnao/carplate/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ANN_DATA.xml  ANN_ZH_DATA.xml  SVM_DATA.xml
app/src/main/cpp/: PlateSobelLocate.cpp  PlateSobelLocate.hpp  common.hpp  main.cpp
app/src/main/java/com/dongnao/carplate/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dongnao/carplate/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
